<resources>
    <string name="app_name">DoPostEmail</string>

    <string name="pref_refresh">pref_refresh</string>
    <string name="pref_refresh_title">Set Refresh Interval</string>

    <string name="pref_refreshList">Refresh Intervals</string>
    <string name="pref_refresh_list">pref_refresh_list</string>
    <string name="pref_refreshList_title">Select Refresh Interval</string>

    <string name="pref_date_sorting_list">Date sorting</string>
    <string name="pref_date_sorting_title">Date sorting</string>
    <string name="pref_sortingList">Date sorting</string>
    <string name="pref_date_sorting">pref_date_sorting</string>

    <color name="black">#C0C0C0</color>

    <string name="action_forward">Forward</string>
    <string name="action_replay_to_all">Reply All</string>
    <string name="action_replay">Reply</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name = "action_new">New Folder</string>
    <string name = "action_new_contact">New Contact</string>
    <string name = "action_delete">Delete</string>
    <string name = "action_upload">Upload</string>
    <string name = "action_attach">Save Attachment</string>
    <string name = "action_send">Send</string>
    <string name = "action_cancel">Cancel</string>
    <string name = "action_search">Search</string>
    <string name = "action_back">Back</string>

    <string name = "radio_html">HTML</string>
    <string name = "radio_plain">Plain</string>

    <string name = "edit_name">Name required</string>
    <string name = "edit_lastname">Last name required</string>
    <string name = "edit_display">Username required</string>
    <string name = "edit_email">Email required</string>
</resources>
