<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="REFRESH INTERVAL"
        android:key="refresh_setting">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_refresh"
            android:title="@string/pref_refresh_title">

        </CheckBoxPreference>

        <ListPreference
            android:key="@string/pref_refresh_list"
            android:title="@string/pref_refreshList_title"
            android:dialogTitle="@string/pref_refreshList"
            android:dependency="@string/pref_refresh"
            android:entries="@array/pref_refreshInterval_entries"
            android:entryValues="@array/pref_refreshInterval_values"
            android:summary="%s"
            android:defaultValue="1">

        </ListPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="DATE SORTING"
        android:key="date_sorting_setting">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="sort_descending_date"
            android:title="Sort by date Descending"
            android:id="@+id/checkDateDesc"
            android:onClick="onCheckboxClickedDesc"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="sort_ascending_date"
            android:title="Sort by date Ascending"
            android:id="@+id/CheckDateAsc"

            android:onClick="onCheckboxClickedAsc"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="sort_descending_subject"
            android:title="Sort by subject Descending"
            android:id="@+id/checkSubDesc"
            android:onClick="onCheckboxClickedDesc"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="sort_ascending_subject"
            android:title="Sort by subject Ascending"
            android:id="@+id/CheckSubAsc"

            android:onClick="onCheckboxClickedAsc"
            />

    </PreferenceCategory>

</PreferenceScreen>